<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="lab5.avdyushkin.tru.pointofsalesimulation.PayActivity">

    <TextView
        android:text="Process Transaction"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/total_label"
            android:id="@+id/totalLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="25sp"
            android:id="@+id/totalVal"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:background="@drawable/boarder" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax"
            android:textSize="25sp"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="italic"
            android:layout_marginLeft="10dp"
            android:id="@+id/taxVal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/blue_button"
            android:layout_marginLeft="10dp"
            android:text="@string/set_tax"
            android:onClick="SetTax"
            android:id="@+id/button1" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_tax"
            android:textSize="25sp"
            android:id="@+id/afterTaxLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boarder"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:id="@+id/afterTaxVal" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:text="@string/activate_pay"
            android:onClick="CompletePayment"
            android:id="@+id/button"
            android:background="@drawable/blue_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:textColor="#FFFFFF"
            android:text="@string/go_back"
            android:onClick="GoBack"
            android:id="@+id/button2"
            android:background="@drawable/red_button" />

    </TableRow>
</LinearLayout>
